# flask_homework

./: .gitignore  README.md  pyproject.toml
flask_homework_l53/: app.py  tasks.db
flask_homework_l53/templates/: add_task.html  base.html  complete_task.html  index.html
flask_homework_l53/templates/old/: add_task.html  index.html
tests/: test_flask_homework_l53.py
